--- a/tagne-math/Cargo.toml
+++ b/tagne-math/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "tegne-math"
+name = "tagne-math"
 version = "0.1.0"
 authors = ["Oliver Berzs <oliver.berzs@gmail.com>"]
 edition = "2018"
