--- a/.github/workflows/math.yml
+++ b/.github/workflows/math.yml
@@ -12,4 +12,4 @@ jobs:
       - uses: actions-rs/cargo@v1
         with:
           command: test
-          args: --release --package tagne-math
+          args: --release --package tegne-math
