--- a/.github/workflows/tegne.yml
+++ b/.github/workflows/tegne.yml
@@ -1,4 +1,4 @@
-name: Tagne check
+name: Tegne check
 
 on:
   push:
@@ -12,4 +12,4 @@ jobs:
       - uses: actions-rs/cargo@v1
         with:
           command: check
-          args: --package tagne
+          args: --package tegne
