--- a/example/Cargo.toml
+++ b/example/Cargo.toml
@@ -6,4 +6,4 @@ edition = "2018"
 
 [dependencies]
 pretty_env_logger = "0.4.0"
-tagne = { path = "../tagne", version = "0.1.0" }
+tegne = { path = "../tegne", version = "0.1.0" }
