--- a/.github/workflows/tegne.yml
+++ b/.github/workflows/tegne.yml
@@ -12,4 +12,4 @@ jobs:
       - uses: actions-rs/cargo@v1
         with:
           command: check
-          args: --package tegne
+          args: --no-default-features --manifest-path "tegne/Cargo.toml"
