--- a/tegne/Cargo.toml
+++ b/tegne/Cargo.toml
@@ -7,3 +7,8 @@ edition = "2018"
 [dependencies]
 ash = "0.30.0"
 log = "0.4.8"
+
+tegne-utils = { path = "../tegne-utils", version = "0.1.0", optional = true }
+
+[features]
+default = ["tegne-utils"]
