--- a/.github/workflows/tegne.yml
+++ b/.github/workflows/tegne.yml
@@ -3,6 +3,10 @@ name: Tegne check
 on:
   push:
     branches: [master]
+    paths:
+      - "tenge/**"
+      - "tenge-math/**"
+      - "tegne-utils/**"
 
 jobs:
   check:
