:green_heart: Fix spelling

--- a/.github/workflows/tegne.yml
+++ b/.github/workflows/tegne.yml
@@ -4,8 +4,8 @@ on:
   push:
     branches: [master]
     paths:
-      - "tenge/**"
-      - "tenge-math/**"
+      - "tegne/**"
+      - "tegne-math/**"
       - "tegne-utils/**"
 
 jobs:
