:green_heart: Add Vulkan SDK install

--- a/.github/workflows/math.yml
+++ b/.github/workflows/math.yml
@@ -10,8 +10,10 @@ jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions-rs/cargo@v1
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Test
+        uses: actions-rs/cargo@v1
         with:
           command: test
           args: --release --package tegne-math
