--- a/.github/workflows/utils.yml
+++ b/.github/workflows/utils.yml
@@ -10,8 +10,10 @@ jobs:
   check:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions-rs/cargo@v1
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Check
+        uses: actions-rs/cargo@v1
         with:
           command: check
           args: --package tegne-utils
