:green_heart: Add Vulkan version

--- a/.github/workflows/tegne.yml
+++ b/.github/workflows/tegne.yml
@@ -11,6 +11,8 @@ on:
 jobs:
   check:
     runs-on: ubuntu-latest
+    env:
+      vulkan-version: 1.2.131.2
     steps:
       - name: Checkout
         uses: actions/checkout@v2
