--- a/.github/workflows/math.yml
+++ b/.github/workflows/math.yml
@@ -5,6 +5,7 @@ on:
     branches: [master]
     paths:
       - "tenge-math/**"
+      - ".github/workflows/math.yml"
 
 jobs:
   test:
@@ -12,6 +13,11 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+      - name: Install Rust nightly
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: nightly
+          override: true
       - name: Test
         uses: actions-rs/cargo@v1
         with:
