--- a/.github/workflows/utils.yml
+++ b/.github/workflows/utils.yml
@@ -6,6 +6,7 @@ on:
     paths:
       - "tegne-utils/**"
       - "tegne-math/**"
+      - ".github/workflows/utils.yml"
 
 jobs:
   check:
@@ -13,6 +14,11 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+      - name: Install Rust nightly
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: nightly
+          override: true
       - name: Check
         uses: actions-rs/cargo@v1
         with:
