--- a/tegne/Cargo.toml
+++ b/tegne/Cargo.toml
@@ -15,6 +15,7 @@ serde = { version = "1.0.106", features = ["derive"] }
 serde_json = "1.0.52"
 tar = "0.4.26"
 image = { version = "0.23.4", default-features = false, features = ["png"] }
+notify = "4.0.15"
 tegne-math = { path = "../tegne-math", version = "0.1.0" }
 tegne-utils = { path = "../tegne-utils", version = "0.1.0", optional = true }
 
