:beetle: Fix some hot-reload issues

--- a/tegne-import/Cargo.toml
+++ b/tegne-import/Cargo.toml
@@ -18,7 +18,8 @@ rusttype = "0.9.1"
 serde = { version = "1.0.106", features = ["derive"] }
 serde_json = "1.0.52"
 indicatif = "0.14.0"
-notify = "4.0.15"
+notify = "5.0.0-pre.2"
+crossbeam-channel = "0.4.2"
 log = "0.4.8"
 pretty_env_logger = "0.4.0"
 regex = "1.3.7"
