--- a/examples/surface/Cargo.toml
+++ b/examples/surface/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
-name = "example"
+name = "example-surface"
 version = "0.1.0"
 authors = ["Oliver Berzs <oliver.berzs@gmail.com>"]
 edition = "2018"
 
 [dependencies]
-pretty_env_logger = "0.4.0"
-tegne = { path = "../tegne", version = "0.1.0" }
+simplelog = "0.8.0"
+tegne = { path = "../../tegne", version = "0.1.0" }
