--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ members = [
   "tegne-math", 
   "tegne-utils", 
   "tegne-import", 
+  "examples/blue",
   "examples/cubes", 
   "examples/surface"
 ]
