:sparkles: Add more examples

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ members = [
   "tegne-utils", 
   "tegne-import", 
   "examples/blue",
+  "examples/gradient",
   "examples/cubes", 
   "examples/surface"
 ]
