--- a/tegne/Cargo.toml
+++ b/tegne/Cargo.toml
@@ -18,7 +18,7 @@ image = { version = "0.23.4", default-features = false, features = ["png"] }
 notify = "5.0.0-pre.2"
 tegne-math = { path = "../tegne-math", version = "0.1.0" }
 tegne-utils = { path = "../tegne-utils", version = "0.1.0", optional = true }
-crossbeam-channel = "0.4.2"
+crossbeam = "0.7.3"
 
 [target.'cfg(target_os = "windows")'.dependencies]
 winapi = { version = "0.3.8", features = ["libloaderapi"] }
