--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,6 @@ members = [
   "examples/blue",
   "examples/gradient",
   "examples/cubes", 
-  "examples/surface"
+  "examples/surface",
+  "examples/dynamic"
 ]
