--- a/tegne/Cargo.toml
+++ b/tegne/Cargo.toml
@@ -14,7 +14,7 @@ log = "0.4.8"
 serde = { version = "1.0.106", features = ["derive"] }
 serde_json = "1.0.52"
 tar = "0.4.26"
-image = { version = "0.23.4", default-features = false, features = ["png"] }
+png = { package = "image", version = "0.23.4", default-features = false, features = ["png"] }
 notify = "5.0.0-pre.2"
 tegne-math = { path = "../tegne-math", version = "0.1.0" }
 tegne-utils = { path = "../tegne-utils", version = "0.1.0", optional = true }
