:hammer: Put all in one project with features

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,7 @@
 [workspace]
 members = [
   "tegne", 
-  "tegne-math", 
-  "tegne-utils", 
-  "tegne-import", 
+  "import", 
   "examples/blue",
   "examples/gradient",
   "examples/cubes", 
