--- a/tegne/Cargo.toml
+++ b/tegne/Cargo.toml
@@ -9,7 +9,7 @@ default = ["controller", "image", "window", "ui"]
 image = ["image_file"]
 window = ["winit"]
 controller = ["window"]
-ui = ["window", "imgui"]
+ui = ["window", "imgui", "imgui-winit-support"]
 
 [dependencies]
 ash = "0.30.0"
@@ -21,9 +21,10 @@ notify = "5.0.0-pre.2"
 crossbeam = "0.7.3"
 
 # optional dependencies
-image_file = { package = "image", version = "*", optional = true }
-winit = { version = "*", optional = true }
-imgui = { version = "*", optional = true }
+image_file = { package = "image", version = "0.23.4", optional = true }
+winit = { version = "0.22.2", optional = true }
+imgui = { version = "0.3.0", optional = true }
+imgui-winit-support = { version = "0.3.1", optional = true }
 
 # Windows dependencies
 [target.'cfg(target_os = "windows")'.dependencies]
