:sparkles: Add Imgui feature and example

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,6 @@ members = [
   "examples/gradient",
   "examples/cubes", 
   "examples/surface",
-  "examples/dynamic"
+  "examples/dynamic",
+  "examples/ui",
 ]
