:fire: Remove log dependency

--- a/import/Cargo.toml
+++ b/import/Cargo.toml
@@ -16,5 +16,4 @@ serde_json = "1.0.52"
 indicatif = "0.14.0"
 notify = "5.0.0-pre.2"
 crossbeam-channel = "0.4.2"
-log = "0.4.8"
-pretty_env_logger = "0.4.0"
+console = "0.11.3"
