--- a/tegne/Cargo.toml
+++ b/tegne/Cargo.toml
@@ -19,7 +19,7 @@ serde = { version = "1.0.106", features = ["derive"] }
 serde_json = "1.0.52"
 tar = "0.4.26"
 notify = "5.0.0-pre.2"
-crossbeam = "0.7.3"
+crossbeam-channel = "0.4.2"
 
 # optional dependencies
 image_file = { package = "image", version = "0.23.4", optional = true }
