--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,5 +8,6 @@ members = [
   "examples/surface",
   "examples/dynamic",
   "examples/ui",
-  "examples/textures"
+  "examples/textures",
+  "examples/toon"
 ]
