--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,13 +2,12 @@
 members = [
   "tegne",
   "import",
-  "examples/blue",
+  "examples/hello",
   "examples/gradient",
   "examples/cubes",
   "examples/surface",
   "examples/dynamic",
   "examples/ui",
-  "examples/textures",
   "examples/toon",
   "examples/blur"
 ]
