--- a/examples/hello/Cargo.toml
+++ b/examples/hello/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "example-textures"
+name = "example-hello"
 version = "0.1.0"
 authors = ["Oliver Berzs <oliver.berzs@gmail.com>"]
 edition = "2018"
