--- a/draw-it/Cargo.toml
+++ b/draw-it/Cargo.toml
@@ -19,8 +19,7 @@ ash = "0.31.0"
 serde = { version = "1.0.112", features = ["derive"] }
 serde_json = "1.0.55"
 tar = "0.4.29"
-notify = "5.0.0-pre.2"
-crossbeam-channel = "0.4.2"
+notify = "4.0.15"
 
 # optional dependencies
 image_file = { package = "image", version = "0.23.5", optional = true }
