--- a/import/Cargo.toml
+++ b/import/Cargo.toml
@@ -13,6 +13,4 @@ spiral = "0.1.9"
 rusttype = "0.9.2"
 serde = { version = "1.0.112", features = ["derive"] }
 serde_json = "1.0.55"
-indicatif = "0.15.0"
-notify = "5.0.0-pre.2"
-crossbeam-channel = "0.4.2"
+notify = "4.0.15"
