--- a/draw-it/Cargo.toml
+++ b/draw-it/Cargo.toml
@@ -5,13 +5,14 @@ authors = ["Oliver Berzs <oliver.berzs@gmail.com>"]
 edition = "2018"
 
 [features]
-default = ["controller", "image", "window", "ui", "logger"]
+default = ["controller", "image", "window", "ui", "logger", "hot-reload"]
 minimal = ["window", "logger"]
 profiler = ["lazy_static"]
 image = ["image_file"]
 window = ["winit"]
 controller = ["window"]
 ui = ["window", "imgui", "imgui-winit-support"]
+hot-reload = ["notify"]
 logger = []
 
 [dependencies]
@@ -19,7 +20,6 @@ ash = "0.31.0"
 serde = { version = "1.0.112", features = ["derive"] }
 serde_json = "1.0.55"
 tar = "0.4.29"
-notify = "4.0.15"
 
 # optional dependencies
 image_file = { package = "image", version = "0.23.5", optional = true }
@@ -27,6 +27,7 @@ winit = { version = "0.22.2", optional = true }
 imgui = { version = "0.4.0", optional = true }
 imgui-winit-support = { version = "0.4.0", optional = true }
 lazy_static = { version = "1.4.0", optional = true }
+notify = { version = "4.0.15", optional = true }
 
 # Windows dependencies
 [target.'cfg(target_os = "windows")'.dependencies]
