--- a/draw-it/Cargo.toml
+++ b/draw-it/Cargo.toml
@@ -18,8 +18,7 @@ logger = []
 [dependencies]
 ash = "0.31.0"
 serde = { version = "1.0.112", features = ["derive"] }
-serde_json = "1.0.55"
-tar = "0.4.29"
+bincode = "1.3.1"
 
 # optional dependencies
 image_file = { package = "image", version = "0.23.5", optional = true }
