--- a/import/Cargo.toml
+++ b/import/Cargo.toml
@@ -7,10 +7,9 @@ edition = "2018"
 [dependencies]
 shaderc = "0.6.2"
 clap = "2.33.1"
-tar = "0.4.28"
 image = { version = "0.23.5", features = ["png"] }
 spiral = "0.1.9"
 rusttype = "0.9.2"
 serde = { version = "1.0.112", features = ["derive"] }
-serde_json = "1.0.55"
+bincode = "1.3.1"
 notify = "4.0.15"
