--- a/import/Cargo.toml
+++ b/import/Cargo.toml
@@ -7,9 +7,8 @@ edition = "2018"
 [dependencies]
 shaderc = "0.6.2"
 clap = "2.33.1"
-image = { version = "0.23.5", features = ["png"] }
-spiral = "0.1.9"
+image = { version = "0.23.7", default-features = false, features = ["png"] }
 rusttype = "0.9.2"
-serde = { version = "1.0.112", features = ["derive"] }
+serde = { version = "1.0.114", features = ["derive"] }
 bincode = "1.3.1"
 notify = "4.0.15"
