--- a/draw-it/Cargo.toml
+++ b/draw-it/Cargo.toml
@@ -15,11 +15,11 @@ hot-reload = ["notify"]
 
 [dependencies]
 ash = "0.31.0"
-serde = { version = "1.0.112", features = ["derive"] }
+serde = { version = "1.0.114", features = ["derive"] }
 bincode = "1.3.1"
 
 # optional dependencies
-image_file = { package = "image", version = "0.23.5", optional = true }
+image_file = { package = "image", version = "0.23.8", default-features = false, features = ["png"], optional = true }
 winit = { version = "0.22.2", optional = true }
 imgui = { version = "0.4.0", optional = true }
 imgui-winit-support = { version = "0.4.0", optional = true }
@@ -28,9 +28,9 @@ notify = { version = "4.0.15", optional = true }
 
 # Windows dependencies
 [target.'cfg(target_os = "windows")'.dependencies]
-winapi = { version = "0.3.8", features = ["libloaderapi"] }
+winapi = { version = "0.3.9", features = ["libloaderapi"] }
 
 # MacOS dependencies
 [target.'cfg(target_os = "macos")'.dependencies]
-cocoa = "0.20.1"
-metal = "0.18.0"
+cocoa = "0.23.0"
+metal = "0.20.0"
