--- a/draw-it/Cargo.toml
+++ b/draw-it/Cargo.toml
@@ -8,9 +8,9 @@ edition = "2018"
 default = ["controller", "image", "ui", "hot-reload"]
 profiler = ["lazy_static"]
 image = ["image_file"]
-window = ["winit"]
+window = ["glfw"]
 controller = ["window"]
-ui = ["window", "imgui", "imgui-winit-support"]
+ui = ["window", "imgui"]
 hot-reload = ["notify"]
 
 [dependencies]
@@ -20,9 +20,8 @@ bincode = "1.3.1"
 
 # optional dependencies
 image_file = { package = "image", version = "0.23.8", default-features = false, features = ["png"], optional = true }
-winit = { version = "0.22.2", optional = true }
+glfw = { version = "*", optional = true }
 imgui = { version = "0.4.0", optional = true }
-imgui-winit-support = { version = "0.4.0", optional = true }
 lazy_static = { version = "1.4.0", optional = true }
 notify = { version = "4.0.15", optional = true }
 
