--- a/draw-it/Cargo.toml
+++ b/draw-it/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2018"
 [features]
 default = ["controller", "image", "ui", "hot-reload"]
 profiler = ["lazy_static"]
-image = ["image_file"]
+image = ["png"]
 window = ["glfw"]
 controller = ["window"]
 ui = ["window", "imgui"]
@@ -19,8 +19,8 @@ serde = { version = "1.0.114", features = ["derive"] }
 bincode = "1.3.1"
 
 # optional dependencies
-image_file = { package = "image", version = "0.23.8", default-features = false, features = ["png"], optional = true }
-glfw = { version = "*", optional = true }
+png = { version = "0.16.7", default-features = false, optional = true }
+glfw = { version = "0.39.1", optional = true }
 imgui = { version = "0.4.0", optional = true }
 lazy_static = { version = "1.4.0", optional = true }
 notify = { version = "4.0.15", optional = true }
