:green_heart: Fix Glfw build

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,6 +22,10 @@ jobs:
         with:
           toolchain: nightly
           override: true
+      - name: Install LibXrandr
+        run: |
+          sudo apt update -y
+          sudo apt install -y libxrandr-dev
       - name: Check
         uses: actions-rs/cargo@v1
         with:
@@ -29,4 +33,4 @@ jobs:
       - name: Test
         uses: actions-rs/cargo@v1
         with:
-          ommand: test
+          command: test
