:green_heart: Add more workflows

--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -1,37 +1,40 @@
-name: Build
+name: Full Linux Build
 
-on:
-  push:
-    branches: [develop]
+on: workflow_dispatch
 
 jobs:
   check:
     runs-on: ubuntu-latest
     env:
-      vulkan-version: 1.2.131.2
+      vulkan-version: 1.2.141.2
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+
       - name: Install Vulkan SDK
         run: |
           wget https://sdk.lunarg.com/sdk/download/${{env.vulkan-version}}/linux/vulkansdk-linux-${{env.vulkan-version}}.tar.gz
           tar xf vulkansdk-linux-${{env.vulkan-version}}.tar.gz
           sudo cp ${{env.vulkan-version}}/x86_64/bin/glslc /usr/local/bin
-      - name: Install Rust nightly
-        uses: actions-rs/toolchain@v1
-        with:
-          toolchain: nightly
-          override: true
+
       - name: Install LibXrandr
         run: |
           sudo apt update -y
           sudo apt install -y libxrandr-dev
           sudo apt install -y libxinerama-dev
           sudo apt install -y libxcursor-dev
-      - name: Check
+
+      - name: Install Rust nightly
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: nightly
+          override: true
+
+      - name: Build
         uses: actions-rs/cargo@v1
         with:
-          command: check
+          command: build
+
       - name: Test
         uses: actions-rs/cargo@v1
         with:
