--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -24,11 +24,7 @@ jobs:
           override: true
 
       - name: Build
-        uses: actions-rs/cargo@v1
-        with:
-          command: build
+        run: cargo build
 
       - name: Test
-        uses: actions-rs/cargo@v1
-        with:
-          command: test
+        run: cargo test
