--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -16,11 +16,7 @@ jobs:
           override: true
 
       - name: Build
-        uses: actions-rs/cargo@v1
-        with:
-          command: build
+        run: cargo build
 
       - name: Test
-        uses: actions-rs/cargo@v1
-        with:
-          command: test
+        run: cargo test
