:green_heart: Fix Linux CI

--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -17,6 +17,7 @@ jobs:
           sudo apt install -y libxrandr-dev
           sudo apt install -y libxinerama-dev
           sudo apt install -y libxcursor-dev
+          sudo apt install -y libxi-dev
 
       - name: Install Rust nightly
         uses: actions-rs/toolchain@v1
