--- a/draw-it/Cargo.toml
+++ b/draw-it/Cargo.toml
@@ -5,12 +5,11 @@ authors = ["Oliver Berzs <oliver.berzs@gmail.com>"]
 edition = "2018"
 
 [features]
-default = ["controller", "image", "ui", "hot-reload"]
+default = ["controller", "image", "ui"]
 image = ["png"]
 window = ["glfw"]
 controller = ["window"]
 ui = ["window", "imgui"]
-hot-reload = ["notify"]
 
 [dependencies]
 ash = "0.31.0"
@@ -21,7 +20,6 @@ bincode = "1.3.1"
 png = { version = "0.16.7", default-features = false, optional = true }
 glfw = { version = "0.39.1", optional = true }
 imgui = { version = "0.4.0", optional = true }
-notify = { version = "4.0.15", optional = true }
 
 # Windows dependencies
 [target.'cfg(target_os = "windows")'.dependencies]
