--- a/draw-it/Cargo.toml
+++ b/draw-it/Cargo.toml
@@ -5,18 +5,16 @@ authors = ["Oliver Berzs <oliver.berzs@gmail.com>"]
 edition = "2018"
 
 [features]
-default = ["image", "ui"]
-image = ["png"]
+default = ["ui"]
 window = ["glfw"]
 ui = ["window", "imgui"]
 
 [dependencies]
 ash = "0.31.0"
-serde = { version = "1.0.114", features = ["derive"] }
+serde = { version = "1.0.115", features = ["derive"] }
 bincode = "1.3.1"
 
 # optional dependencies
-png = { version = "0.16.7", default-features = false, optional = true }
 glfw = { version = "0.39.1", optional = true }
 imgui = { version = "0.4.0", optional = true }
 
