--- a/draw-it/Cargo.toml
+++ b/draw-it/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Oliver Berzs <oliver.berzs@gmail.com>"]
 edition = "2018"
 
 [features]
-default = ["ui"]
+default = ["ui", "png"]
 window = ["glfw"]
 ui = ["window", "imgui"]
 
@@ -16,6 +16,7 @@ bincode = "1.3.1"
 # optional dependencies
 glfw = { version = "0.39.1", optional = true }
 imgui = { version = "0.4.0", optional = true }
+png = { version = "0.16.7", default-features = false, optional = true }
 
 # Windows dependencies
 [target.'cfg(target_os = "windows")'.dependencies]
