--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -11,5 +11,11 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
+      - name: Install Rust
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: 1.46.0
+          override: true
+
       - name: Check
         run: cargo check --no-default-features
