--- a/.github/workflows/full.yml
+++ b/.github/workflows/full.yml
@@ -13,6 +13,12 @@ jobs:
       - name: Install Ninja
         run: choco install ninja
 
+      - name: Install Rust
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: 1.46.0
+          override: true
+
       - name: Build
         run: cargo build
 
@@ -33,6 +39,12 @@ jobs:
           sudo apt install -y libxinerama-dev
           sudo apt install -y libxcursor-dev
           sudo apt install -y libxi-dev
+
+      - name: Install Rust
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: 1.46.0
+          override: true
 
       - name: Build
         run: cargo build
