:beetle: Fix no-feature build

--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -18,4 +18,4 @@ jobs:
           override: true
 
       - name: Check
-        run: cargo check --no-default-features
+        run: cargo check --lib --no-default-features
