--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,15 +9,13 @@ name = "dic"
 path = "src/dic.rs"
 
 [features]
-default = ["ui", "png", "glsl"]
+default = ["window", "png", "glsl"]
 glsl = ["shaderc"]
 window = ["glfw"]
-ui = ["window", "imgui"]
 log = []
 
 # optional dependencies
 [dependencies]
 glfw = { version = "0.39.1", optional = true }
-imgui = { version = "0.4.0", optional = true }
 png = { version = "0.16.7", default-features = false, optional = true }
 shaderc = { version = "0.6.2", optional = true }
