--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,11 +11,11 @@ path = "src/dic.rs"
 [features]
 default = ["window", "png", "glsl"]
 glsl = ["shaderc"]
-window = ["glfw"]
+window = ["winit"]
 log = []
 
 # optional dependencies
 [dependencies]
-glfw = { version = "0.39.1", optional = true }
+winit = { version = "0.23.0", optional = true }
 png = { version = "0.16.7", default-features = false, optional = true }
 shaderc = { version = "0.6.2", optional = true }
