--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -14,8 +14,8 @@ jobs:
       - name: Install Rust
         uses: actions-rs/toolchain@v1
         with:
-          toolchain: 1.46.0
+          toolchain: 1.47.0
           override: true
 
       - name: Check
-        run: cargo check --lib --no-default-features
+        run: cargo check --lib
