--- a/.github/workflows/full.yml
+++ b/.github/workflows/full.yml
@@ -16,11 +16,11 @@ jobs:
       - name: Install Rust
         uses: actions-rs/toolchain@v1
         with:
-          toolchain: 1.46.0
+          toolchain: 1.47.0
           override: true
 
       - name: Build
-        run: cargo build
+        run: cargo build --all-targets --all-features
 
       - name: Test
         run: cargo test
@@ -43,11 +43,11 @@ jobs:
       - name: Install Rust
         uses: actions-rs/toolchain@v1
         with:
-          toolchain: 1.46.0
+          toolchain: 1.47.0
           override: true
 
       - name: Build
-        run: cargo build
+        run: cargo build --all-targets --all-features
 
       - name: Test
         run: cargo test
