--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -18,4 +18,4 @@ jobs:
           override: true
 
       - name: Check
-        run: cargo check --lib
+        run: cargo check --no-default-features --lib
