--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ exclude = [
 ]
 
 [features]
-default = []
+default = ["window"]
 png = ["png_dep"]
 jpeg = ["jpeg_dep"]
 gltf = ["gltf_dep", "png", "jpeg"]
